--- a/static/stile mappa.css
+++ b/static/stile mappa.css
@@ -7,11 +7,11 @@ body,html {
     background-color: #f2f2f2;
   }
   
-  
-  
-  
+ 
+
 .header {
   display: flex;
+  position: fixed;
   width: 100%;
   border-bottom: 5px solid #e4e4e4;
   justify-content: space-around;
@@ -32,6 +32,8 @@ body,html {
   width: 10%;
   margin-right: 10px;
 }
+
+
 
 .menu {
   display: flex;
@@ -94,7 +96,7 @@ body,html {
   text-decoration: none;
   border-radius: 3px;
   margin: 3px;
-  padding: 3px;
+  padding: 4px 3px;
 }
 
 .userpage {
@@ -115,10 +117,15 @@ body,html {
   font-size: 12px;
 }
 
+.hamburger{display: none;}
+  
+
+
 
 .container {
   display: flex;
   height: calc(100vh - 64px); /* Altezza della finestra meno l'altezza del menu */
+  padding-top: 64px;
 }
 .left-column,
 .right-column {
@@ -156,4 +163,66 @@ body,html {
 
 .utentelog{
   display: none;
+}
+
+
+@media (max-width: 768px) {
+  .header{
+    position:relative;
+    padding-left: 20px;
+    padding-right: 60px;
+    width: auto;
+    justify-content:space-around;
+    background-color: #fff;
+    overflow: hidden;
+  }
+  .menu{
+    position: absolute;
+    top:47px;
+    right:-100%;
+    width: 100%;
+    transition: 0.5s ease-in-out;
+  }
+  .menu li{width: 100%;} 
+
+  .hamburger{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 21px;
+    width: 30px;
+    position: absolute;
+    right:10px;
+  }
+
+  .hamburger span{
+    display: block;
+    top: 8px;
+    position: absolute;
+    width: 30px; 
+    height: 3px;
+    border: 3px;
+    border-radius: 3px;
+    background-color: #881c1c;
+  }
+
+  .hamburger span:nth-child(1){margin-top: -6px;}
+  .hamburger span:nth-child(2){margin-top: 0px}
+  .hamburger span:nth-child(3){margin-top: 6px;}
+
+  .open.header{overflow: visible;  transition: 0.5s ease-in-out;}
+  
+  .open.header .menu{
+    position: absolute;
+    top:47px;
+    right:0%;
+    width: 100%;
+  }
+
+  .container {
+    display: flex;
+    height: calc(100vh - 48px); /* Altezza della finestra meno l'altezza del menu */
+    padding-top: 0;
+  }
+
 }
