Fix overflow e indexing navbar

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="/home">Bacheca</a></li>
+                <li><a href="/">Bacheca</a></li>
                <li><a href="/mappa">Feste</a></li> 
                 <li><a href="/classifica">Quiz</a></li>
             </ul>   
@@ -169,7 +169,7 @@
     
             // Aggiunge il colore rosso alla div cliccata
             element.classList.add('red-background');
-                
+
             // Salva l'id della div cliccata in una variabile
             clickedDivId = element.id;
             console.log("Clicked div id:", clickedDivId);
