--- a/templates/mappa.html
+++ b/templates/mappa.html
@@ -21,7 +21,7 @@
 
         <nav class="menu">
             <ul>
-                <li><a href="/home">Bacheca</a></li>
+                <li><a href="/">Bacheca</a></li>
                <li><a href="/mappa">Feste</a></li> 
                 <li><a href="/classifica">Quiz</a></li>
             </ul>   
