--- a/static/stileDashboard.css
+++ b/static/stileDashboard.css
@@ -114,15 +114,16 @@ body,html {
   font-size: 12px;
 }
 
-
+.iframe-overlay {
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Impedisce all'overlay di intercettare gli eventi del mouse */
+}
 
 .hamburger{display: none;}
-
-
-
-
-
-
 
 
 .container {
