--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -90,7 +90,7 @@
     
 </head>
 <body>
-    <div class="card">
+    <div class="reg card">
         <h4 class="title">Registrati</h4>
         <form name="registr" action="/registrazione" method="POST">
             <div class="field">
