--- a/templates/home.html
+++ b/templates/home.html
@@ -74,6 +74,14 @@
                 <a href="">Nome utente</a>
                 <a href="" class="">Spotto persone!!</a>
             </div>
+            <div class="spotted">
+                <a href="">Nome utente</a>
+                <a href="" class="">Spotto persone!!</a>
+            </div>
+            <div class="spotted">
+                <a href="">Nome utente</a>
+                <a href="" class="">Spotto persone!!</a>
+            </div>
             {% for spot in spot %}
             <div class="spotted" id="{{ spot.id_utente }}" onclick="changeBackgroundColor(this)">
                 <p>{{ spot.utente.nome }}</p>
@@ -115,12 +123,13 @@
             <span class="anonimo">
                 <input type="checkbox">Anonimo
             </span>
-            <button class="btninvia">Invia</button>
+            <button class="btninvia">INVIA</button>
         </div>
 
         <div class="rispondi">
-            <img src="/static/images/rispondi.svg" class="rispondiimg">
-            <a >Rispondi</a>
+            <img src="/static/images/rispondi.svg" class="rispondiimg">Rispondi a nome utente
+            <input type="text" placeholder="Rispondi" id="risposta">
+            <button class="btninvia">Invia</button>
         </div>
 
     </div>
