--- a/static/stileDashboard.css
+++ b/static/stileDashboard.css
@@ -128,15 +128,15 @@ body,html {
 
 .container {
   display: flex;
-  height: calc(100vh - 64px); /* Altezza della pagina meno altezza del menu */
+  height: calc(100vh - 70px); /* Altezza della pagina meno altezza del menu */
 }
 
 .left-column {
   margin-top: 54px;
+  height: 100%;
   background-color: #fff;
   flex: 1;
   border: 1px ;
-  height: 100%;
   overflow: auto;
 }
   
@@ -171,23 +171,24 @@ body,html {
 .scoreboard table {
   width: 100%;
   height: 100%;
-  font-size: 1em;
+  font-size: 16px;
 }
 
 .scoreboard td {
   text-align: center;
+  padding-top: 5%;
 }
 
 /* stile della colonna a sinistra */
 
 .right-column {
   margin-top: 54px;
+  height: 100%;
   background-color: #881c1c;
   border: 3px;
   display: flex;
   flex-direction: column;
   flex: 2;
-  height: 100%;
 }
 
 .hidden_div{
@@ -205,7 +206,7 @@ body,html {
   border-radius: 5px;
   flex: 1;
   /* larghezza della div e margin proporzionale */
-  margin: 5% 5% 0% 5%;
+  margin: 2.5% 5% 0% 5%;
   /* height: 80%; */
 }
 
@@ -220,13 +221,12 @@ body,html {
   border: 3px solid #e4e4e4;
   background-color: #e4e4e4;
   border-radius: 3px;
-  margin: 3% 5%;
+  margin: 5% 5%;
   padding: 0.5%;
 }
 
 .domanda {
   height: 70%;
-  padding-top: 5%;
   padding-bottom: 5%;
 }
 
@@ -237,9 +237,9 @@ body,html {
 }
 
 .img-argomento img{
-  
-  width: 70%;
-  height: 50%;
+  align-items: center;
+  width: 20%;
+  margin-top: 5%;
 }
 
 .box-risposta {
